added login.html and loginStyle.css

--- a/Weddify/WeddifyProject/weddify/templates/weddify/layout.html
+++ b/Weddify/WeddifyProject/weddify/templates/weddify/layout.html
@@ -1,10 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> weddify| {% block title %}{% endblock %} </title> 
-    {% load static %} 
+    
     <link rel="stylesheet" type="text/css" href="{% static 'weddify/basicStyle.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    
@@ -40,9 +41,10 @@
         <form action="#url" method="post" class="search"><i class="fa fas fa-search" style=" color: white;"></i> <input type="text" name="search" id="search" placeholder="search items"></form>
       
         <a href="#sign_up" id="security"> Sign up</a>
-        <a href="login.html" id="security"><i class="fa fas fa-unlock-alt" style="margin-right: 5px;"></i>Login</a>
+        <a href="{% url 'login' %}" id="security"><i class="fa fas fa-unlock-alt" style="margin-right: 5px;"></i>Login</a>
          
          
       </div>
+      {% block body %}{% endblock %}
 </body>
 </html>
