added register html and modified views, urls, models

--- a/Weddify/WeddifyProject/weddify/templates/weddify/layout.html
+++ b/Weddify/WeddifyProject/weddify/templates/weddify/layout.html
@@ -40,8 +40,8 @@
 
         <form action="#url" method="post" class="search"><i class="fa fas fa-search" style=" color: white;"></i> <input type="text" name="search" id="search" placeholder="search items"></form>
       
-        <a href="#sign_up" id="security"> Sign up</a>
-        <a href="{% url 'login' %}" id="security"><i class="fa fas fa-unlock-alt" style="margin-right: 5px;"></i>Login</a>
+        <a href="{% url 'register' %}" id="security"> Sign up</a>
+        <a href="#login" id="security"><i class="fa fas fa-unlock-alt" style="margin-right: 5px;"></i>Login</a>
          
          
       </div>
