Started working on venues

--- a/Weddify/WeddifyProject/weddify/templates/weddify/layout.html
+++ b/Weddify/WeddifyProject/weddify/templates/weddify/layout.html
@@ -19,7 +19,7 @@
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="#venues">Venues</a>
+                <a href="{% url 'venues' %}">Venues</a>
                 <a href="#beauty_services">Beauty Services</a>
                 <a href="#flourist">Flourist</a>
                 <a href="#photographers">Photography</a>
